spring-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: nasif10/spring-app:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1 
kind: Service 
metadata: 
  name: spring-svc
spec:
  selector:
    app: spring-app
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
