ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ng-svc
                port:
                  number: 80
          - path: /api/v1/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: spring-svc
                port:
                  number: 8080
